tests/sksl/errors/ReservedNameHvec4.glsl
### Compilation failed:

error: 1: 'hvec4' is a reserved word
int hvec4;
    ^^^^^
1 error
